# solar-potential-MTL

./: .gitignore  README.md  config.py  pyproject.toml
data/outputs/: demand_impact.csv  policy_scenarios.csv
data/processed/: borough_aggregates.geojson  pvlib_sample.csv  tmy_montreal.csv
data/raw/: boroughs.geojson  dsm_manifest.json
doc/: session_01.md
src/: aggregate.py  collect_dsm.py  collect_polygones.py  demand_impact.py  economics.py  map.py  pvlib_sample.py  roof_features.py  surrogate_model.py  validate_building_data.py  validate_dsm.py  validate_surrogate.py
