[project]
name = "solar-potential-mtl"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=0.14",
    "pvlib>=0.10",
    "xgboost>=2.0",
    "shap>=0.44",
    "folium>=0.15",
    "requests>=2.31",
    "rasterio>=1.3",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "pyproj>=3.6",
    "shapely>=2.1.2",
    "pyarrow>=24.0.0",
    "fsspec>=2026.4.0",
    "aiohttp>=3.13.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
